# rocket-todos

./: Cargo.toml
src/: main.rs
src/controllers/: router.rs  todo.rs
src/models/: todo.rs
src/response/: generic_response.rs  mod.rs
src/services/: todo_service.rs
